<resources>
    <string name="app_name">PHM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_new_report">NewReportActivity</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_descrizione">Descrizione</string>
    <string name="action_action_newreport">Nuovo report</string>

    <string name="no_report">Non ci sono report</string>
    <string name="prompt_NuovoReport">Inserisci un nuovo report</string>
    <string name="prompt_battito">Battito cardiaco</string>
    <string name="prompt_pressione">Pressione sanguigna</string>
    <string name="prompt_temperatura">Temperatura corporea</string>
    <string name="prompt_glicemia">Indice glicemico</string>
    <string name="prompt_note">Altre informazioni</string>
    <string name="prompt_BTNNuovoReport">Aggiungi</string>
    <string name="prompt_imgdelete">IMGDelete</string>
    <string name="prompt_imgedit">IMGEdit</string>
    <string name="prompt_imgbattito">IMGBattito</string>
    <string name="prompt_EditReport">Modifica report</string>
    <string name="prompt_BTNEditReport">Aggiorna i dati</string>
</resources>